ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: auth-cluster-ip-service
              servicePort: 8080
          - path: /api/?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: demo-gateway
              servicePort: 8080
          - path: /api/swagger-ui/?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: demo-swagger-gateway
              servicePort: 8080
